# rust-context-demo

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/configuration/: builder.rs  context_configuration.rs  mod.rs  properties.rs
core/src/context/: mod.rs
http/: Cargo.toml
http/src/: main.rs
resources/: application.yml  log4rs.yaml
