[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
bytes = "1.2.1"
log = "0.4.17"
log4rs = { version = "1.1.1" , features=["all_components"]}
serde = "1.0.144"
serde_yaml = "0.9.11"
serde_json = "1.0.85"
mongodb = "2.3.0"
