[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
bytes = "1.2.1"
core = { version = "0.1.0", path = "../core" }
log = "0.4.17"
log4rs = { version = "1.1.1", features = ["all_components"] }
lazy_static = "1.4.0"
mongodb = "2.3.0"
futures = "0.3.24"
axum = "0.6.0-rc.1"